--- a/core/templates/empleado/empleado_form.html
+++ b/core/templates/empleado/empleado_form.html
@@ -242,6 +242,8 @@
     });
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
+
 <script>
     var hasServerErrorsValue = "{% if form.errors %}true{% else %}false{% endif %}";
 
